<resources>
    <string name="app_name">Explore Indonesia</string>
    <string name="title_home">Home</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukan_nama_lengkap">Masukan Nama Lengkap</string>
    <string name="konfirmasi_pasword">Konfirmasi Pasword</string>
    <string name="buat_password">Buat Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="masukan_username">Masukan Username</string>
    <string name="greetings">Selamat datang</string>
    <string name="yuk_jelajahi">Yuk Jelajahi</string>
    <string name="kekayaan_nusantara">Kekayaan Nusantara</string>
    <string name="jelajahi_nusantara">Jelajah Nusantara</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="kategori">Kategori</string>
    <string name="daerah">Daerah</string>
    <string name="cari_daerah_disini">Cari daerah disini</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="this_email">This Email</string>
    <string name="search_for_find_region">Search for find Region</string>
    <string name="nama_daerah">nama Daerah</string>
    <string name="view_keatgori_item">view keatgori item</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="masukan_username_baru">Masukan Username Baru</string>
    <string name="masukan_nama_lengkap_baru">Masukan Nama Lengkap Baru</string>
    <string name="jelajah_sumatra_utara">Jelajah Sumatra Utara</string>
    <string name="jelajah_sulawesi_selatan">Jelajah Sulawesi Selatan</string>
    <string name="description">description</string>
    <string name="quiz">Quiz</string>
    <string name="dua_mantis">%.2f</string>
    <string name="ocr_penerjemah_bahasa">OCR Penerjemah</string>
    <string name="medan">Medan</string>
    <string name="makassar">Makassar</string>
    <string name="papua">Papua</string>
    <string name="pilih_bahasa_tujuan">Pilih Asal Bahasa</string>
    <string name="ambil_gambar_teks_bahasa_daerah_lalu_terjemahkan_ke_bahasa_indonesia">Ambil gambar teks bahasa daerah, lalu terjemahkan ke bahasa Indonesia.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cari_tahu_tentang_aplikasi_ini">Cari tahu tentang aplikasi ini</string>
    <string name="q_u0026_a">FAQ</string>
    <string name="app_logo">app logo</string>
    <string name="login_form">login form</string>
    <string name="register_form">register form</string>
    <string name="bingkai_gambar">bingkai gambar</string>
    <string name="flashcard_image">flashcard image</string>
    <string name="bahasa">Bahasa :</string>
    <string name="map_daerah">map daerah</string>
    <string name="map_home">map_home</string>
    <string name="image_button_ocr">image button OCR</string>
    <string name="image">image</string>
    <string name="kenali_budaya_indonesia_dengan_cara_yang_menarik">Kenali Budaya Indonesia dengan cara yang menarik</string>
    <string name="submit">Submit</string>
    <string name="hasil_deteksi">Hasil Deteksi</string>
    <string name="hasil_terjemahan">Hasil terjemahan</string>
    <string name="nilai_anda">Nilai Anda</string>
    <string name="kembali">Kembali</string>
    <string name="title">Title</string>
    <string name="jelajah_papua">Jelajah Papua</string>
    <string name="pertanyaan_akan_tampil_di_sini">Pertanyaan akan tampil di sini</string>
    <string name="pilihan_a">Pilihan A</string>
    <string name="pilihan_b">Pilihan B</string>
    <string name="pilihan_c">Pilihan C</string>
    <string name="pilihan_d">Pilihan D</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="this_nama_lengkap">This Nama Lengkap</string>
    <string name="explore">Explore</string>
</resources>