<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.exploreindonesia.ui.main_ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.exploreindonesia.ui.main_ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.exploreindonesia.ui.main_ui.Histori.HistoriFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_histori" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.exploreindonesia.ui.main_ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.example.exploreindonesia.ui.main_ui.profile.EditProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_edit_profile"/>
</navigation>