<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    tools:context=".ui.auth_ui.LoginFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/image"
        android:src="@drawable/tarsius"
        app:layout_constraintBottom_toTopOf="@+id/edt_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:labelFor="@+id/edt_login_email"
        android:text="@string/email"
        android:textColor="@color/merahmarun"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_login_email"
        app:layout_constraintEnd_toEndOf="@+id/edt_login_email"
        app:layout_constraintStart_toStartOf="@+id/edt_login_email"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edt_login_email"
        style="@style/Edit_teks"
        android:importantForAutofill="no"
        android:hint="@string/masukan_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/merahmarun"
        app:layout_constraintBottom_toTopOf="@+id/edt_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/poppins_bold"
        android:labelFor="@+id/edt_login_password"
        android:text="@string/password"
        android:textColor="@color/merahmarun"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_login_password"
        app:layout_constraintEnd_toEndOf="@+id/edt_login_password"
        app:layout_constraintStart_toStartOf="@+id/edt_login_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_login_email" />


    <EditText
        android:id="@+id/edt_login_password"
        style="@style/Edit_teks"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/masukan_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_login_email"
        app:layout_constraintStart_toStartOf="@+id/edt_login_email" />

</androidx.constraintlayout.widget.ConstraintLayout>