<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    tools:context=".ui.main_ui.profile.EditProfileFragment">

    <TextView
        android:id="@+id/textView3"
        style="@style/title_teks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_lengkap"
        app:layout_constraintBottom_toTopOf="@+id/name_edit"
        app:layout_constraintStart_toStartOf="@+id/name_edit" />

    <EditText
        android:id="@+id/name_edit"
        style="@style/title_teks"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/edt_background"
        android:hint="@string/masukan_nama_lengkap_baru"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView4"
        style="@style/title_teks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/username_edit"
        app:layout_constraintStart_toStartOf="@+id/username_edit" />

    <EditText
        android:id="@+id/username_edit"
        style="@style/title_teks"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edt_background"
        android:hint="@string/masukan_username_baru"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/name_edit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/name_edit"
        app:layout_constraintTop_toBottomOf="@+id/name_edit"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>